--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container">
 
-        <div id="div1" class="innerDiv"><img id="drag1" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image1.jpg"></div>
-        <div id="div2" class="innerDiv"><img id="drag2" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image2.jpg"></div>
-        <div id="div3" class="innerDiv"><img id="drag3" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image3.jpg"></div>
+        <div id="div1" class="innerDiv"><img id="drag1" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image1.jpg?raw=true"></div>
+        <div id="div2" class="innerDiv"><img id="drag2" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image2.jpg?raw=true"></div>
+        <div id="div3" class="innerDiv"><img id="drag3" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image3.jpg?raw=true"></div>
 
-        <div id="div4" class="innerDiv"><img id="drag4" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image4.jpg"></div>
-        <div id="div5" class="innerDiv"><img id="drag5" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image5.jpg"></div>
-        <div id="div6" class="innerDiv"><img id="drag6" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image6.jpg"></div>
+        <div id="div4" class="innerDiv"><img id="drag4" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image4.jpg?raw=true"></div>
+        <div id="div5" class="innerDiv"><img id="drag5" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image5.jpg?raw=true"></div>
+        <div id="div6" class="innerDiv"><img id="drag6" draggable="true" src="https://github.com/RamDhangar/Images/blob/main/image6.jpg?raw=true"></div>
     
     
     </div>
